Fixed perfect scrollbar in mobile and overlapping of loading gifs

--- a/css/contentNavigation/content-navigation.less
+++ b/css/contentNavigation/content-navigation.less
@@ -11,7 +11,7 @@
 			margin-bottom : 0;
 
 			li {
-				width : auto;
+				width   : auto;
 				display : inline-block;
 
 				&:nth-child( 1 ) {
@@ -72,7 +72,7 @@
 						}
 
 						.sc-play-container {
-							top : 50%;
+							top        : 50%;
 							margin-top : -25px;
 						}
 					}
@@ -114,7 +114,7 @@
 		cursor        : pointer;
 
 		span {
-			margin-top: -26px;
+			margin-top : -26px;
 		}
 	}
 
@@ -123,7 +123,7 @@
 		&.affix, &.affix-top, &.affix-bottom {
 			@media ( max-width : @screen-xs-max ) {
 				position : static;
-				top : 0 !important;
+				top      : 0 !important;
 			}
 		}
 
@@ -145,7 +145,7 @@
 			@media ( max-width : @screen-xs-max ) {
 				position : fixed;
 				top      : 0;
-				z-index  : 1000;
+				z-index  : 2000000002;
 			}
 		}
 
@@ -194,11 +194,11 @@
 					}
 
 					.cn-filter-item-title {
-						width : ~"calc( 100% - 19px )";
-						width : ~"-moz-calc( 100% - 19px )";
-						width : ~"-webkit-calc( 100% - 19px )";
-						width : ~"-ms-calc( 100% - 19px )";
-						width : ~"-o-calc( 100% - 19px )";
+						width   : ~"calc( 100% - 19px )";
+						width   : ~"-moz-calc( 100% - 19px )";
+						width   : ~"-webkit-calc( 100% - 19px )";
+						width   : ~"-ms-calc( 100% - 19px )";
+						width   : ~"-o-calc( 100% - 19px )";
 						display : inline-block;
 					}
 
